--- a/css/style.css
+++ b/css/style.css
@@ -74,3 +74,19 @@ li {
 canvas {
   margin-top: 50px;
 }
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+img:hover {
+  animation-name: spin;
+  animation-duration: .5s;
+}
+
+
+
+
